# MindBridge-Chess

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: experiment.yaml
docs/: architecture.md  experiment-plan.md  user-flow.md
notebooks/: eeg_analysis.ipynb  p300_validation.ipynb
scripts/: check_unicorn.py  preview_board.py  run_experiment.py  run_web.py  visualize_results.py
src/mindbridge_chess/: __init__.py  app.py  board.py  classifier.py  constants.py  eeg_acquisition.py  exercise_rook_checkmate.py  interface.py  lsl_markers.py  p300_detector.py  stimulus.py  utils.py
tests/: test_board.py  test_eeg_acquisition.py  test_interface.py  test_p300_detector.py  test_stimulus.py
web/: app.js  index.html  styles.css
